--- a/package.json
+++ b/package.json
@@ -6,8 +6,7 @@
     "dev": "next dev --turbopack",
     "build": "next build",
     "start": "next start",
-    "lint": "eslint",
-    "test": "vitest"
+    "lint": "eslint"
   },
   "dependencies": {
     "airtable": "^0.12.2",
@@ -30,8 +29,7 @@
     "prettier": "^3.6.2",
     "prettier-plugin-tailwindcss": "^0.6.14",
     "tailwindcss": "^4",
-    "typescript": "^5",
-    "vitest": "^2"
+    "typescript": "^5"
   },
   "engines": {
     "node": "20.x"
