--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
   "dependencies": {
     "airtable": "^0.12.2",
     "bcryptjs": "^3.0.2",
+    "date-fns": "^2.30.0",
+    "date-fns-tz": "^2.0.0",
     "next": "15.5.2",
     "next-auth": "5.0.0-beta.29",
     "react": "19.1.0",
