--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "build": "next build --turbopack",
     "start": "next start",
     "lint": "eslint",
-    "test": "tsc app/api/stamp/validator.ts --module nodenext --target es2020 --moduleResolution nodenext --esModuleInterop --outDir tests/dist && node --test tests/*.test.mjs"
+    "test": "tsc app/api/stamp/validator.ts lib/validation/admin.ts app/api/admin/health/route.ts --module nodenext --target es2020 --moduleResolution nodenext --esModuleInterop --outDir tests/dist && node --test tests/*.test.mjs tests/admin/*.test.mjs"
   },
   "dependencies": {
     "airtable": "^0.12.2",
@@ -15,7 +15,8 @@
     "next": "15.5.2",
     "next-auth": "5.0.0-beta.29",
     "react": "19.1.0",
-    "react-dom": "19.1.0"
+    "react-dom": "19.1.0",
+    "zod": "^3.23.8"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
