fix: use real exceljs for XLSX export and keep shim under alias

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -26,10 +26,10 @@
       "@/*": [
         "./*"
       ],
-      "exceljs": [
+      "@/lib/exceljs-shim": [
         "./src/lib/exceljs"
       ],
-      "exceljs/*": [
+      "@/lib/exceljs-shim/*": [
         "./src/lib/exceljs/*"
       ]
     }
